存储新增和本机文件列表